--- a/game-library.html
+++ b/game-library.html
@@ -187,6 +187,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Favourite games section -->
         <section id="fav-games" class="container section">
@@ -269,6 +270,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <section id="reserve-game-form" class="container section">
             <div class="row justify-content-center">
